[package]
name = "news_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
scraper = "0.13.0"
actix-web = "4"
actix-rt = "2.8.0"
env_logger = "0.9.0"
